--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "delta-engine",
-  "version": "1.5.0",
+  "version": "1.6.0",
   "description": "A minimalist platform for accelerating AI Agent prototype iteration",
   "type": "module",
   "main": "dist/index.js",
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^20.11.19",
     "@types/uuid": "^9.0.8",
     "jest": "^29.7.0",
