feat: establish comprehensive testing & release infrastructure
Implement systematic testing and release process to prevent incomplete
test coverage and ensure reliable releases.

## Problem Solved

Previous release attempts revealed critical process gaps:
- E2E tests were skipped (not in `npm test`)
- No mandatory pre-release checklist
- No standardized test command (`test:all` didn't exist)
- Unclear testing requirements and responsibilities
- No documented release procedure

This led to near-miss releases with failing E2E tests that were only
discovered through manual user verification.

## Solution: 2-Phase Implementation

### Phase 1: Infrastructure (Immediate)

**1. RELEASE_CHECKLIST.md** (project root)
- Mandatory pre-release checklist with 7 sections
- All checkboxes must be completed before release
- Includes testing, build, docs, version management
- Physical enforcement mechanism

**2. package.json Updates**
Added critical test commands:
- `test:e2e` - Run E2E test suite
- `test:all` - Run ALL tests (unit + integration + e2e)
- `test:pre-release` - Build + complete test validation
- `test:quick` - Fast unit test feedback
These commands provide clear, discoverable testing workflow.

**3. tests/run-all.ts** - Unified Test Runner
- Runs all test suites in sequence (unit → integration → e2e)
- Stops immediately on first failure (fast feedback)
- Clear output format matching integration test runner
- Shows duration and summary for all phases

**4. tests/run-e2e.ts** - Enhanced E2E Runner
- Added `--core` flag to run only P0+P1 tests
- Improved error output and failure messages
- Better success/failure summary
- Consistent output format with other test runners

**5. CLAUDE.md** - Testing & Release Protocol Section
- Critical testing checklist (run `test:all` before claiming pass)
- Complete test command reference
- Test architecture overview (3-layer pyramid)
- Release checklist integration
- Development testing workflow
- Release process summary

### Phase 2: D

--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "test": "npm run test:unit && npm run test:integration",
     "test:unit": "NODE_OPTIONS='--experimental-vm-modules' jest --no-coverage tests/unit",
     "test:integration": "tsx tests/run-integration.ts",
+    "test:e2e": "tsx tests/run-e2e.ts",
+    "test:all": "npm run test:unit && npm run test:integration && npm run test:e2e",
+    "test:pre-release": "npm run build && npm run test:all",
+    "test:quick": "npm run test:unit",
     "test:watch": "jest --watch tests/unit",
     "test:stateless": "tsx tests/integration/stateless-core.test.ts",
     "test:hooks": "tsx tests/integration/hooks.test.ts",
